--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
       <option value='600'>600</option>
       <option value='800'>800</option>
       <option value='1000'>1,000</option>
-    </select>
+    </select><Br />
+    Text:
+    <select id="texts">
+      <option value="essays/addison-pleasures-of-imagination.html">Addison, The Pleasures of Imagination</option>
+      <option value="essays/chesterson-lying-in-bed.html">Chesterson, Lying in Bed</option>
+      <option value="essays/emerson-american-scholar.html">Emerson, The American Scholar</option>
+      <option value="essays/emerson-self-reliance.html">Emerson, Self Reliance</option>
+      <option value="essays/lincoln-gettysburg.html">Lincoln, Gettysburg Address</option>
+      <option value="essays/tranquil.html">Seneca, Tranquility of Mind</option>
+    </div>
+
   </div>
+
+
   <div id="invisible" style="display: none">
 
   </div>
