--- a/index.html
+++ b/index.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head>
+  <head>
     <meta charset='UTF-8' />
-    <title></title>
+    <title>Turbo Reader!</title>
     <link href='style.css' rel='stylesheet' />
-</head>
-<body>
-  <div id='window'>
-    <div id='word'>
-      <div id='left'>cons</div><div id='mid'>i</div><div id='right'>stently</div><div>&nbsp;</div>
-    </div>
-  </div>
-  <div id="essay"></div>
+  </head>
+  <body>
 
-  <div id="controls">
-    WPM: 
-    <select id="wpm">
-      <option value='100'>100</option>
-      <option value='200'>200</option>
-      <option value='400'>400</option>
-      <option value='600'>600</option>
-      <option value='800'>800</option>
-      <option value='1000'>1,000</option>
-    </select><Br />
-    Text:
-    <select id="texts">
-      <option value="essays/addison-pleasures-of-imagination.html">Addison, The Pleasures of Imagination</option>
-      <option value="essays/chesterson-lying-in-bed.html">Chesterson, Lying in Bed</option>
-      <option value="essays/emerson-american-scholar.html">Emerson, The American Scholar</option>
-      <option value="essays/emerson-self-reliance.html">Emerson, Self Reliance</option>
-      <option value="essays/lincoln-gettysburg.html">Lincoln, Gettysburg Address</option>
-      <option value="essays/tranquil.html">Seneca, Tranquility of Mind</option>
+    <div id='window'>
+      <div id='word'>
+        <div id='left'></div><div id='mid'></div><div id='right'></div><div>&nbsp;</div>
+      </div>
     </div>
 
-  </div>
+    <br />
+    
+    <div id="essay"></div>
+
+    <div id="controls">
+      WPM: 
+      <select id="wpm">
+        <option value='100'>100</option>
+        <option value='200'>200</option>
+        <option value='400'>400</option>
+        <option value='600'>600</option>
+        <option value='800'>800</option>
+        <option value='1000'>1,000</option>
+      </select><Br />
+      Text:
+      <select id="texts">
+        <option value="essays/addison-pleasures-of-imagination.html">Addison, The Pleasures of Imagination</option>
+        <option value="essays/chesterson-lying-in-bed.html">Chesterson, Lying in Bed</option>
+        <option value="essays/emerson-american-scholar.html">Emerson, The American Scholar</option>
+        <option value="essays/emerson-self-reliance.html">Emerson, Self Reliance</option>
+        <option value="essays/lincoln-gettysburg.html">Lincoln, Gettysburg Address</option>
+        <option value="essays/tranquil.html">Seneca, Tranquility of Mind</option>
+      </div>
+    </div>
+  
+      <div id='window'>
+      <div id='word'>
+        <div id='left'></div><div id='mid'></div><div id='right'></div><div>&nbsp;</div>
+      </div>
+    </div>
+    <div id="essay"></div>
 
 
-  <div id="invisible" style="display: none">
 
-  </div>
-  <script type='text/javascript' src="vendor/jquery-1.10.2.min.js"></script>
-  <script type='text/javascript' src="app.js"></script>
 
-</body>
+    <div id="invisible" style="display: none">
+
+    </div>
+    <script type='text/javascript' src="vendor/jquery-1.10.2.min.js"></script>
+    <script type='text/javascript' src="app.js"></script>
+
+  </body>
 </html>
